Fix GHCR image name format to use github.repository
- Change IMAGE_NAME to use ${{ github.repository }} instead of hardcoded path
- This will use okiabrian123/chatbox_router (correct repository name)
- Fix 'denied: installation not allowed to Create organization package' error
- Maintain single platform build and cache optimization

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: okiabrian123/chatbox-router
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   test:
